[package]
name = "hf-candle-app"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["metal"] }
ratatui = "0.27.0"
